// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button renders correctly when disabled 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button renders correctly with all props combined 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-gray-300 bg-transparent hover:bg-gray-50 h-12 px-6 text-lg custom-class"
  data-testid="complex-button"
  disabled=""
>
  Complex Button
</button>
`;

exports[`Button renders correctly with custom className 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 custom-class"
>
  Custom Button
</button>
`;

exports[`Button renders correctly with default props 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4"
>
  Click me
</button>
`;

exports[`Button renders correctly with large size 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-12 px-6 text-lg"
>
  Large Button
</button>
`;

exports[`Button renders correctly with medium size 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4"
>
  Medium Button
</button>
`;

exports[`Button renders correctly with outline variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-gray-300 bg-transparent hover:bg-gray-50 h-10 px-4"
>
  Outline Button
</button>
`;

exports[`Button renders correctly with primary variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4"
>
  Primary Button
</button>
`;

exports[`Button renders correctly with secondary variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-100 text-gray-900 hover:bg-gray-200 h-10 px-4"
>
  Secondary Button
</button>
`;

exports[`Button renders correctly with small size 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-8 px-3 text-sm"
>
  Small Button
</button>
`;
